# modplug-tools

./: Makefile.am  configure.ac
mp123/: Makefile.am  modplug123.c
mpplay/: Makefile.am  modplugplay.c
